[project]
name = "creator-suite-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.4",
    "fastapi[all]>=0.116.1",
    "fastapi-cli>=0.0.8",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.42",
    "pyjwt>=2.10.1",
    "celery>=5.5.3",
    "redis>=6.2.0",
    "httpx>=0.28.1",
    "python-multipart>=0.0.20",
    "ffmpeg-python>=0.2.0",
    "pillow>=11.3.0",
    "requests>=2.32.4",
    "azure-storage-blob>=12.26.0",
    "google-generativeai>=0.8.5",
    "python-jose[jwt]>=3.5.0",
    "passlib>=1.7.4",
    "discord.py>=2.4.0",
    "python-telegram-bot>=21.10",
    "aiohttp>=3.11.11",
    "razorpay>=1.4.2",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.1.0",
]
